--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -2,13 +2,13 @@
 {% load humanize %}
 {% block content %}
     {% if random_slider %}
-        <div class="relative w-full h-[80vh] overflow-hidden">
+        <div class="relative w-full h-[80vh] overflow-hidden z-10">
             <img 
                 src="{{ random_slider.image.url }}" 
                 alt="{{ random_slider.title }}" 
-                class="absolute top-0 left-0 w-full h-full object-cover"
+                class="absolute top-0 left-0 w-full h-full object-cover z-0"
             >
-            <div class="absolute bottom-0 right-0 p-8 md:p-16 lg:p-24 text-right">
+            <div class="absolute bottom-0 right-0 p-8 md:p-16 lg:p-24 text-right z-20">
                 <h1 class="text-white text-2xl md:text-4xl lg:text-5xl font-bold bg-black bg-opacity-50 px-4 py-2 rounded-lg shadow-lg">
                     {{ random_slider.title }}
                 </h1>
@@ -16,7 +16,7 @@
         </div>
     {% endif %}
     
-    <div class="container mx-auto px-4 py-8">
+    <div class="container mx-auto px-4 py-8 relative z-30">
         {% with products=discounted_products title='محصولات با بیشترین تخفیف' detail_field='discount_percentage' %}
             {% include 'includes/product_section.html' %}
         {% endwith %}
